Remove unused files and update internal links to use absolute paths for consistency

--- a/components/header.html
+++ b/components/header.html
@@ -52,6 +52,6 @@
     
     <!-- Lá cờ Việt Nam (chuyển ngôn ngữ) -->
     <div style="padding: 10px; justify-content: center; align-items: center; gap: 10px; display: flex">
-        <img src="../assets/flag.svg" alt="Vietnam Flag" style="width: 32px; height:32px">
+        <img src="/ISE_Web/assets/flag.svg" alt="Vietnam Flag" style="width: 32px; height:32px">
     </div>
 </header>
