Add new pages for university admission information for 2025

--- a/components/header.html
+++ b/components/header.html
@@ -23,14 +23,14 @@
                 </ul>
             </li>
             <li class="navigation">
-                <a href="#" class="nav-name">Tuyển sinh</a>
+                <a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc" class="nav-name">Tuyển sinh</a>
                 <ul class="dropdown-menu">
-                    <li class="nav-item"><a href="#" class="dropdown-item">Bậc Đại học</a></li>
-                    <li class="nav-item"><a href="#" class="dropdown-item">Sau Đại học</a></li>
+                    <li class="nav-item"><a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc" class="dropdown-item">Bậc Đại học</a></li>
+                    <li class="nav-item"><a href="/ISE_Web/tuyen-sinh/tuyen-sinh-sau-dai-hoc" class="dropdown-item">Sau Đại học</a></li>
                 </ul>
             </li>
             <li class="navigation">
-                <a href="/tin-tuc/tin-hoc-vu" class="nav-name">Tin tức</a>
+                <a href="/ISE_Web/tin-tuc/tin-hoc-vu" class="nav-name">Tin tức</a>
                 <ul class="dropdown-menu">
                     <li class="nav-item"><a href="/ISE_Web/tin-tuc/tin-hoc-vu" class="dropdown-item">Tin Học vụ</a></li>
                     <li class="nav-item"><a href="/ISE_Web/tin-tuc/tin-tot-nghiep" class="dropdown-item">Tin Tốt nghiệp</a></li>
