Update banner styles and adjust section margins for improved layout

--- a/styles/phuong-thuc-tuyen-sinh.css
+++ b/styles/phuong-thuc-tuyen-sinh.css
@@ -22,9 +22,9 @@ a {
     color: inherit
 }
 
-img {
+.banner {
     width: 1100px;
-    height: 320px;
+    height: 520px;
     border-radius: 32px;
     margin-bottom: 32px;
     margin-top: 32px;
