--- a/styles/home.css
+++ b/styles/home.css
@@ -2,8 +2,8 @@
 .slider{
     width: 1440px;
     max-width: 100vw;
-    height: 700px;
-    margin: auto;
+    height: 582px;
+    margin: 0px auto;
     position: relative;
     overflow: hidden;
 }
@@ -94,7 +94,7 @@
 /*Dấu chấm thể hiện vị trí*/
 .slider .dots{
     position: absolute;
-    bottom: 10px;
+    bottom: 30px;
     left: 0;
     color: #fff;
     width: 100%;
