--- a/styles/home.css
+++ b/styles/home.css
@@ -3,7 +3,7 @@
     width: 1440px;
     max-width: 100vw;
     height: 582px;
-    margin: auto;
+    margin: 20px auto;
     position: relative;
     overflow: hidden;
 }
