--- a/components/header.html
+++ b/components/header.html
@@ -50,8 +50,8 @@
         </ul>
     </div>
     
-    <!-- Lá cờ Việt Nam (chuyển ngôn ngữ) -->
+    <!-- Logo Đại học quốc gia -->
     <div style="padding: 10px; justify-content: center; align-items: center; gap: 10px; display: flex">
-        <img src="/ISE_Web/assets/flag.svg" alt="Vietnam Flag" style="width: 32px; height:32px">
+        <img src="/ISE_Web/assets/dhqg-logo.png" alt="Đại học Quốc gia Thành phố Hồ Chí Minh" style="width: 32px; height:28px">
     </div>
 </header>
