Refactor CSS styles for improved layout and design consistency
- Updated styles in doi-ngu-nhan-su.css to enhance the page title section with a new background image and overlay effect, adjusting dimensions and padding for better visual appeal.
- Removed outdated styles from gioi-thieu-chung-new.css to streamline the stylesheet and reduce redundancy.
- Modified styles in gioi-thieu-chung.css to standardize section titles and hero banner elements, improving typography and layout.
- Deleted the obsolete tuyen-sinh-new.css file to clean up the codebase.
- Adjusted styles in tuyen-sinh.css to refine margins and positioning for images and buttons, enhancing overall layout responsiveness.

--- a/components/header.html
+++ b/components/header.html
@@ -25,8 +25,8 @@
             <li class="navigation">
                 <a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc" class="nav-name">Tuyển sinh</a>
                 <ul class="dropdown-menu">
-                    <li class="nav-item"><a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc" class="dropdown-item">Bậc Đại học</a></li>
-                    <li class="nav-item"><a href="/ISE_Web/tuyen-sinh/tuyen-sinh-sau-dai-hoc" class="dropdown-item">Sau Đại học</a></li>
+                    <li class="nav-item"><a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc#undergrad-section" class="dropdown-item">Bậc Đại học</a></li>
+                    <li class="nav-item"><a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc#postgrad-section" class="dropdown-item">Sau Đại học</a></li>
                 </ul>
             </li>
             <li class="navigation">
@@ -35,7 +35,7 @@
                     <li class="nav-item"><a href="/ISE_Web/tin-tuc/tin-hoc-vu" class="dropdown-item">Tin Học vụ</a></li>
                     <li class="nav-item"><a href="/ISE_Web/tin-tuc/tin-tot-nghiep" class="dropdown-item">Tin Tốt nghiệp</a></li>
                     <li class="nav-item"><a href="/ISE_Web/tin-tuc/tin-tuyen-dung" class="dropdown-item">Tin Tuyển dụng</a></li>
-                    <li class="nav-item"><a href="/ISE_Web/tin-tuc/tin-khoa-hoc-cong-nghe" class="dropdown-item">Tin Khoa học - Công nghệ</a></li>
+                    <li class="nav-item"><a href="/ISE_Web/tin-tuc/tin-khoa-hoc-cong-nghe" class="dropdown-item">Tin Khoa học <br>- Công nghệ</a></li>
                 </ul>
             </li>
             <li class="navigation">
